<resources>
    <string name="app_name">Bank Ticket</string>

    <string name="login">Login</string>
    <string name="Email"> Email </string>
    <string name="password"> Password </string>
    <string name="forgtpass">Forget Password? </string>
    <string name="newuser">New user? Sign Up </string>
    <string name="selectlang">Select Language </string>
    <string name="englang">English</string>
    <string name="arblang">العربية </string>
    <string name="enter">Enter </string>
    <string name="passemail">Enter your E-mail </string>
    <string name="signup">Sign Up </string>
    <string name="firstname"> First Name </string>
    <string name="lastname"> Last Name </string>

    <string name="confirmpass">Confirm Password </string>
    <string name="existuser"> Existing user? Login </string>
    <string name="back"> Back </string>
    <string name="resetpass"> Reset Password </string>
    <string name="Changelanguage"> Change Language </string>
    <string name="logout">  Log Out </string>

    <string name="reservation"> Reserve Ticket </string>
    <string name="viewticket"> View Ticket </string>
    <string name="nearstbranch">  Nearest Branches </string>
    <string name="department">  Select Department : </string>
    <string name="branch"> Select Branch : </string>
    <string name="ticketnumber">Ticket Number : </string>

    <string name="turnnumber">Turn Number : </string>
    <string name="counternumber">Counter Number : </string>
    <string name="waitingtime"> Waiting Time : </string>
    <string name="branchlocation">Branch Location : </string>
    <string name="chosendepartment">Department : </string>

    <string name="passwords_not_match">Passwords don\'t match</string>
    <string name="failedadduser">Failed to add user</string>
    <string name="useradded">User added successfully</string>
    <string name="missingfields">Missing Fields</string>
    <string name="wrongfields">Wrong email or password</string>
    <string name="emailsent">Email sent</string>

    <string name="neareastbranch">Nearest Branch</string>
    <string name="dokki">Dokki</string>
    <string name="maadi">Maadi</string>
    <string name="helwan">Helwan</string>

    <string name="customerservice">Customer Services</string>
    <string name="teller">Teller</string>
    <string name="reception">Reception</string>

    <string name="settings">Settings</string>
    <string name="taketurn">Take Turn</string>

    <string name="failedlocation">Failed to get location</string>
    <string name="acceptpermission">Accept the permission to get nearest branch</string>

    <string name="ticketadded">Ticket Added Successfully</string>
    <string name="alreadyhaveticket">You already have a ticket</string>
    <string name="thanks">Thanks for using our Bank Ticket App</string>

    <string name="alerttitle">Warning!</string>
    <string name="alertmessage">If you leave now you will to request a new ticket</string>
    <string name="proceed">proceed</string>
    <string name="cancel">cancel</string>
    <string name="home">Home</string>
    <string name="ticket">Ticket</string>

    <string name="close_app">Application will restart to change language</string>
    <string name="finish">Finish</string>
    <string name="turnpassed">Your turn has passed, make a new ticket</string>

</resources>