<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Settings">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:background="@drawable/ovalbtn"
        android:onClick="openChangeLanguage"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingEnd="30dp"
        android:paddingBottom="10dp"
        android:text="@string/Changelanguage"
        android:textColor="@color/colorwhite"
        android:textSize="25sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/ovalbtn"
        android:onClick="logout"
        android:paddingStart="38dp"
        android:paddingTop="10dp"
        android:paddingEnd="38dp"
        android:paddingBottom="10dp"
        android:text="@string/logout"
        android:textColor="@color/colorwhite"
        android:textSize="25sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:onClick="back"
        android:text="@string/back"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

</LinearLayout>